packages/rocket/rocket-0.4.10/core/codegen/tests/ui-fail/catch_type_errors.stderr
error[E0277]: the trait bound `usize: Responder<'_>` is not satisfied
 --> $DIR/catch_type_errors.rs:6:30
  |
6 | fn f1(_request: &Request) -> usize {
  |                              ^^^^^ the trait `Responder<'_>` is not implemented for `usize`
  |
  = note: required by `respond_to`

error[E0277]: the trait bound `bool: Responder<'_>` is not satisfied
  --> $DIR/catch_type_errors.rs:12:30
   |
12 | fn f2(_request: &Request) -> bool {
   |                              ^^^^ the trait `Responder<'_>` is not implemented for `bool`
   |
   = note: required by `respond_to`

error[E0308]: mismatched types
  --> $DIR/catch_type_errors.rs:18:7
   |
17 | #[catch(404)]
   | ------------- expected due to this
18 | fn f3(_request: bool) -> usize {
   |       ^^^^^^^^^^^^^^ expected `&rocket::Request<'_>`, found `bool`
   |
   = note: expected fn pointer `for<'r, 's> fn(&'r rocket::Request<'s>) -> _`
                 found fn item `fn(bool) -> usize {f3}`

error[E0277]: the trait bound `usize: Responder<'_>` is not satisfied
  --> $DIR/catch_type_errors.rs:24:12
   |
24 | fn f4() -> usize {
   |            ^^^^^ the trait `Responder<'_>` is not implemented for `usize`
   |
   = note: required by `respond_to`
